--- a/index.html
+++ b/index.html
@@ -26,27 +26,27 @@
                 <div class="players">
                     <!-- .player*6>img[src="images/players/player-$.png"]+h3{Top Player-$} -->
                     <div class="player">
-                        <img src="images/players/player-1.png" alt="">
+                        <img src="./images/players/player-1.png" alt="">
                         <h3 class="player-name">Top Player-1</h3>
                     </div>
                     <div class="player">
-                        <img src="images/players/player-2.png" alt="">
+                        <img src="./images/players/player-2.png" alt="">
                         <h3 class="player-name">Top Player-2</h3>
                     </div>
                     <div class="player">
-                        <img src="images/players/player-3.png" alt="">
+                        <img src="./images/players/player-3.png" alt="">
                         <h3 class="player-name">Top Player-3</h3>
                     </div>
                     <div class="player">
-                        <img src="images/players/player-4.png" alt="">
+                        <img src="./images/players/player-4.png" alt="">
                         <h3 class="player-name">Top Player-4</h3>
                     </div>
                     <div class="player">
-                        <img src="images/players/player-5.png" alt="">
+                        <img src="./images/players/player-5.png" alt="">
                         <h3 class="player-name">Top Player-5</h3>
                     </div>
                     <div class="player">
-                        <img src="images/players/player-6.png" alt="">
+                        <img src="./images/players/player-6.png" alt="">
                         <h3 class="player-name">Top Player-6</h3>
                     </div>
                 </div>
@@ -57,7 +57,7 @@
                 <div class="blogs">
                     <article class="blog">
                         <div class="thumbnail">
-                            <img src="/images/blogs/blog-1.png" alt="">
+                            <img src="./images/blogs/blog-1.png" alt="">
                         </div>
                         <div class="blog-info">
                             <h3 class="blog-title">13 of My Favorite
@@ -67,7 +67,7 @@
                     </article>
                     <article class="blog">
                         <div class="thumbnail">
-                            <img src="/images/blogs/blog-2.png" alt="">
+                            <img src="./images/blogs/blog-2.png" alt="">
                         </div>
                         <div class="blog-info">
                             <h3 class="blog-title">13 of My Favorite
@@ -77,7 +77,7 @@
                     </article>
                     <article class="blog">
                         <div class="thumbnail">
-                            <img src="/images/blogs/blog-3.png" alt="">
+                            <img src="./images/blogs/blog-3.png" alt="">
                         </div>
                         <div class="blog-info">
                             <h3 class="blog-title">13 of My Favorite
@@ -87,7 +87,7 @@
                     </article>
                     <article class="blog">
                         <div class="thumbnail">
-                            <img src="/images/blogs/blog-4.png" alt="">
+                            <img src="./images/blogs/blog-4.png" alt="">
                         </div>
                         <div class="blog-info">
                             <h3 class="blog-title">13 of My Favorite
@@ -105,7 +105,7 @@
             <div class="courses">
                 <div class="course">
                     <div class="course-banner">
-                        <img src="/images/courses/course-1.png" alt="">
+                        <img src="./images/courses/course-1.png" alt="">
                     </div>
                     <div class="course-detail">
                         <h3 class="course-title">React - The Complete
@@ -129,7 +129,7 @@
                 </div>
                 <div class="course">
                     <div class="course-banner">
-                        <img src="/images/courses/course-2.png" alt="">
+                        <img src="./images/courses/course-2.png" alt="">
                     </div>
                     <div class="course-detail">
                         <h3 class="course-title">Powerpoint 2020
@@ -153,7 +153,7 @@
                 </div>
                 <div class="course">
                     <div class="course-banner">
-                        <img src="/images/courses/course-3.png" alt="">
+                        <img src="./images/courses/course-3.png" alt="">
                     </div>
                     <div class="course-detail">
                         <h3 class="course-title">The Complete JavaScript
